--- a/index2.html
+++ b/index2.html
@@ -178,11 +178,11 @@
     </div>
 
     <script>
-        function format(command) {
-            document.execCommand(command, false, null);
-            updateBlockFormat();
-            updateButtonStates();
-        }
+        // function format(command) {
+        //     document.execCommand(command, false, null);
+        //     updateBlockFormat();
+        //     updateButtonStates();
+        // }
 
         function formatBlock(command) {
             if (command.startsWith('justify')) {
