--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <button class="h-max w-max px-[15px] py-[5px] bg-gray-600 text-white rounded-[8px]">submit</button>
     </div>
 
-    <script src="./RTE.js"></script>
+    <!-- <script src="./RTE.js"></script> -->
+    <script src="./RichTextEditor.js"></script>
     <script src="./script.js"></script>
 </body>
 
